--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,9 +46,13 @@
             android:launchMode="singleTop"
             android:theme="@style/SettingsTheme" />
 
+        <!--<meta-data-->
+            <!--android:name="io.fabric.ApiKey"-->
+            <!--android:value="${fabric_api_key}" />-->
+
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="${fabric_api_key}" />
+            android:value="YOUR API KEY HERE" />
 
     </application>
 
