--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ buildscript {
     ext.kotlin_version = "1.1.2-3"
     ext.support_lib_version = "25.3.1"
     ext.retrofit_version = "2.2.0"
-    ext.dbflow_version = "4.0.0-beta7"
+    ext.dbflow_version = "4.0.1"
     ext.dagger2_version = "2.10"
     ext.espresso_version = "2.2.2"
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
