--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.1.2-5"
-    ext.support_lib_version = "25.4.0"
-    ext.retrofit_version = "2.2.0"
-    ext.dbflow_version = "4.0.4"
-    ext.dagger2_version = "2.10"
+    ext.kotlin_version = "1.1.3-2"
+    ext.support_lib_version = "26.0.0"
+    ext.retrofit_version = "2.3.0"
+    ext.dbflow_version = "4.0.5"
+    ext.dagger2_version = "2.11"
     ext.espresso_version = "2.2.2"
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,7 +23,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://maven.google.com' }
+        google()
         maven { url "https://www.jitpack.io" }
     }
 }
