--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = "1.1.3-2"
-    ext.support_lib_version = "26.0.0"
+    ext.support_lib_version = "26.0.1"
     ext.retrofit_version = "2.3.0"
     ext.dbflow_version = "4.0.5"
     ext.dagger2_version = "2.11"
@@ -12,7 +12,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
