--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.oss.licenses.plugin'
 
 android {
     compileSdkVersion 26
@@ -42,6 +43,8 @@ dependencies {
     compile "com.android.support:design:$support_lib_version"
     compile "com.android.support:cardview-v7:$support_lib_version"
     compile "com.android.support:preference-v14:$support_lib_version"
+
+    compile "com.google.android.gms:play-services-oss-licenses:11.2.2"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
