--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.1.4-3"
-    ext.support_lib_version = "26.0.2"
+    ext.kotlin_version = "1.1.50"
+    ext.support_lib_version = "26.1.0"
     ext.retrofit_version = "2.3.0"
     ext.dbflow_version = "4.0.5"
     ext.dagger2_version = "2.11"
