--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.oss.licenses.plugin'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "org.mightyfrog.android.s4fd"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -37,40 +37,42 @@ kapt {
 }
 
 dependencies {
-    compile fileTree(include: ["*.jar"], dir: "libs")
+    implementation fileTree(include: ["*.jar"], dir: "libs")
 
-    compile "com.android.support:appcompat-v7:$support_lib_version"
-    compile "com.android.support:design:$support_lib_version"
-    compile "com.android.support:cardview-v7:$support_lib_version"
-    compile "com.android.support:preference-v14:$support_lib_version"
+    implementation "com.android.support:appcompat-v7:$support_lib_version"
+    implementation "com.android.support:design:$support_lib_version"
+    implementation "com.android.support:cardview-v7:$support_lib_version"
+    implementation "com.android.support:preference-v14:$support_lib_version"
 
-    compile "com.google.android.gms:play-services-oss-licenses:11.4.2"
+    implementation "com.google.android.gms:play-services-oss-licenses:11.4.2" // 11.6.0 throws exception
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    compile "com.google.code.gson:gson:2.8.1"
+    implementation "com.google.code.gson:gson:2.8.1"
 
-    compile "io.reactivex:rxjava:1.3.2"
-    compile "io.reactivex:rxandroid:1.2.1"
+    implementation "io.reactivex:rxjava:1.3.2"
+    implementation "io.reactivex:rxandroid:1.2.1"
 
-    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
-    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:3.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.1"
 
-    compile "com.google.dagger:dagger:$dagger2_version"
+    implementation "com.google.dagger:dagger:$dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
     provided "javax.annotation:jsr250-api:1.0"
 
     kapt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow-kotlinextensions:${dbflow_version}"
+    implementation "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    implementation "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    implementation "com.github.Raizlabs.DBFlow:dbflow-kotlinextensions:${dbflow_version}"
 
-    compile "com.squareup.picasso:picasso:2.5.2"
+    implementation "com.squareup.picasso:picasso:2.5.2"
 
-    compile "org.mightyfrog.centeringrecyclerview:centeringrecyclerview:1.1.6"
+    implementation "org.mightyfrog.centeringrecyclerview:centeringrecyclerview:1.1.6"
 
-    compile "com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar"
+    implementation "com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar"
 
     androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version", {
         exclude group: "com.android.support"
