--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.2.41"
-    ext.support_version = "27.1.1"
+    ext.kotlin_version = "1.2.50"
+    ext.support_version = "28.0.0-alpha3"
     ext.retrofit_version = "2.3.0"
     ext.dbflow_version = "4.2.4"
     ext.dagger2_version = "2.13"
@@ -12,9 +12,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha18'
+        classpath 'com.android.tools.build:gradle:3.2.0-beta01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:oss-licenses:0.9.1'
+        classpath 'com.google.gms:oss-licenses:0.9.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,9 +23,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
         maven { url "https://www.jitpack.io" }
+        jcenter()
     }
 }
 
