--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.2.51"
-    ext.support_version = "28.0.0-alpha3"
+    ext.kotlin_version = "1.2.60"
+    ext.support_version = "28.0.0-rc01"
     ext.retrofit_version = "2.3.0"
     ext.dbflow_version = "4.2.4"
     ext.dagger2_version = "2.13"
@@ -12,7 +12,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha02'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:oss-licenses:0.9.2'
 
