--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "com.google.gms.oss.licenses.plugin"
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-kapt"
-apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-android-extensions"
 
 android {
     compileSdkVersion 28
@@ -25,6 +25,12 @@ android {
         abortOnError false
     }
 }
+
+def support_version = "28.0.0-rc01"
+def retrofit_version = "2.3.0"
+def dbflow_version = "4.2.4"
+def dagger2_version = "2.13"
+def espresso_version = "2.2.2"
 
 dependencies {
     implementation fileTree(include: ["*.jar"], dir: "libs")
@@ -63,21 +69,21 @@ dependencies {
 
     implementation "com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar"
 
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version", {
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_version", {
         exclude group: "com.android.support"
     })
-    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version", {
+    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:$espresso_version", {
         exclude group: "com.android.support"
     })
-    androidTestCompile("com.android.support.test.espresso:espresso-web:$espresso_version", {
+    androidTestImplementation("com.android.support.test.espresso:espresso-web:$espresso_version", {
         exclude group: "com.android.support"
     })
-    androidTestCompile "org.mockito:mockito-android:2.7.14"
+    androidTestImplementation "org.mockito:mockito-android:2.7.14"
 
-    testCompile "org.mockito:mockito-core:2.10.0"
-    testCompile "org.robolectric:robolectric:3.4.2"
-    testCompile "org.khronos:opengl-api:gl1.1-android-2.1_r1"
-    testCompile "junit:junit:4.12"
+    testImplementation "org.mockito:mockito-core:2.10.0"
+    testImplementation "org.robolectric:robolectric:3.4.2"
+    testImplementation "org.khronos:opengl-api:gl1.1-android-2.1_r1"
+    testImplementation "junit:junit:4.12"
 }
 
 kapt {
