--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
     }
 }
 
-def support_version = "28.0.0-rc01"
+def support_version = "28.0.0"
 def retrofit_version = "2.3.0"
 def dbflow_version = "4.2.4"
 def dagger2_version = "2.13"
@@ -39,7 +39,7 @@ dependencies {
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:preference-v14:$support_version"
-    implementation "com.google.android.gms:play-services-oss-licenses:16.0.0"
+    implementation "com.google.android.gms:play-services-oss-licenses:16.0.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
