--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -26,19 +26,19 @@ android {
     }
 }
 
-def support_version = "28.0.0"
+def support_version = "1.0.0"
 def retrofit_version = "2.3.0"
 def dbflow_version = "4.2.4"
 def dagger2_version = "2.13"
-def espresso_version = "2.2.2"
+def espresso_version = "3.1.0-alpha4"
 
 dependencies {
     implementation fileTree(include: ["*.jar"], dir: "libs")
 
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
-    implementation "com.android.support:preference-v14:$support_version"
+    implementation "androidx.appcompat:appcompat:$support_version"
+    implementation "com.google.android.material:material:$support_version"
+    implementation "androidx.cardview:cardview:$support_version"
+    implementation "androidx.legacy:legacy-preference-v14:$support_version"
     implementation "com.google.android.gms:play-services-oss-licenses:16.0.1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -69,13 +69,13 @@ dependencies {
 
     implementation "com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar"
 
-    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espresso_version", {
+    androidTestImplementation("androidx.test.espresso:espresso-core:$espresso_version", {
         exclude group: "com.android.support"
     })
-    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:$espresso_version", {
+    androidTestImplementation("androidx.test.espresso:espresso-contrib:$espresso_version", {
         exclude group: "com.android.support"
     })
-    androidTestImplementation("com.android.support.test.espresso:espresso-web:$espresso_version", {
+    androidTestImplementation("androidx.test.espresso:espresso-web:$espresso_version", {
         exclude group: "com.android.support"
     })
     androidTestImplementation "org.mockito:mockito-android:2.7.14"
